# roc-lang-prototype

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE.md  ROADMAP.md  ROC_CORE.md  ROC_VISION.md  SECURITY.md  SPEC.md  SPEC_V0.md  TRIAGE.md  compiler_architecture.md  pyproject.toml  topics.json
.github/: labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  spec_request.md
.github/workflows/: ci.yml  codeql.yml  issue-labeler.yml  labels-sync.yml  publish.yml  release.yml  sbom.yml
examples/: first.roc  for_demo.roc  hello.roc  while_demo.roc
examples/modules/: math_utils.roc  module_demo.roc
roc/: __init__.py  __main__.py  ast.py  cli.py  diagnostics.py  interpreter.py  lexer.py  loader.py  modules.py  parser.py  typechecker.py
roc/compiler/: __init__.py  __main__.py  frontend.py  ir.py
tests/: test_cli.py  test_compiler.py  test_examples.py  test_interpreter.py  test_lexer.py  test_loader.py  test_main.py  test_parser.py  test_typechecker.py
tests/conformance/fail/: enum_unknown_variant.roc
