[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roc-lang-prototype"
version = "0.2.0"
description = "Prototype interpreter and design docs for the Roc language."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "lexluger"}]
keywords = ["language", "interpreter", "compiler", "roc"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/JROChub/roc-lang-prototype"
Repository = "https://github.com/JROChub/roc-lang-prototype"
Issues = "https://github.com/JROChub/roc-lang-prototype/issues"

[project.scripts]
roc = "roc.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["roc*"]
exclude = ["tests*", "examples*"]
